[Stella][Feature] Support reading fluss table Link: https://code.alibaba-inc.com/soe/stella/codereview/23880680 * [Stella][Feature] Support reading fluss table